style.css
body {
  margin: 0;
  height: 150vh;
}

#bar-container {
  background-color: #3c3a39;
  padding: 3% 10%;
}

#bar-container,
.logo {
  color: #fff;
}

#status-bar {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-bottom: 3%;
}

.time {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 14px;
  line-height: 16px;
  text-align: center;
  letter-spacing: -0.28px;
  width: 54px;
  height: 16px;
}

.fas-container .fas {
  height: 10px;
}

/* Bar2 Logo and Menu */
#tool-bar {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-top: 3%;
}

.logo {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 18px;
  line-height: 24px;
  text-decoration: none;
}

.fa-bars {
  font-size: 30px;
  cursor: pointer;
}

/* Introduction */
#main-section {
  background-color: #1c1a19;
  background-image: url("images/backgrounds/bg1_mobile.svg");
  background-repeat: no-repeat;
  background-size: 35%;

  /* background-size: 26%; */

  background-position: 100% 115%;
  padding: 25vw 10%;
}

.header1 {
  font-family: 'Crete Round', serif;
  font-style: normal;
  font-weight: normal;
  font-size: 56px;
  line-height: 64px;
  letter-spacing: 0.37px;
  color: #ff6b00;
  margin: 0;
}

.header2 {
  font-family: 'Roboto', sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 24px;
  line-height: 32px;
  color: #fff5e1;
}

.description {
  font-family: 'Poppins', sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 24px;
  color: #fff;
}

/* Social Media Icons */
#social-media-links {
  list-style-type: none;
  display: flex;
  justify-content: start;
  flex-wrap: wrap;
  margin: 0;
  padding: 0;
}

.link {
  padding: 0 3%;
  color: #dbd8d7;
}

.link img {
  width: 21px;
  height: 21px;
  transition: all 0.2s;
}

.link a:link img {
  filter: none;
}

.link a:visited img {
  filter: invert(60%);
}

.link a:hover img {
  filter: contrast(200%) brightness(150%);
  transform: scale(1.4);
}

.link a:active img {
  filter: saturate(100);
}

/* Works Section */
#works-header h2 {
  font-family: 'Crete Round', serif;
  font-style: normal;
  font-weight: normal;
  font-size: 40px;
  line-height: 52px;
  text-align: center;
  color: #1C1A19;;
}

#header-line {
  border-top: 1px solid #212121;
}

/* Cards */
.card1 img {
  width: 100%;
}

.card1 h3,
.card1 p,
.card1 .tag-group {
  color: #091E42;
}

.content h3 {
  font-family: 'Crete Round', serif;
  font-style: normal;
  font-weight: normal;
  font-size: 32px;
  line-height: 44px;
  margin: 22px 0;
}

.content p {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: normal;
  font-size: 16px;
  line-height: 24px;
  margin: 0;
}

.tag-group {
  list-style-type: none;
  margin: 0;
  padding: 0;
  display: flex;
  flex-wrap: wrap;
}

.card1 .tag {
  border: 1px solid #8993A4;
}

.tag {
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: 500;
  font-size: 15px;
  line-height: 20px;
  padding: 10px;
  margin: 8px 12px 8px 0;
}

.main-btn {
  padding: 10px;
  margin-top: 10px;
}

.btn {
  display: inline-block;
  text-decoration: none;
  font-family: 'Inter', sans-serif;
  font-style: normal;
  font-weight: bold;
  font-size: 17px;
  line-height: 24px;
  background-color: #FF6B00;
  border: 1px solid #FF6B00;
  color: #fff;
  transition: all 0.2s;
}

.btn:visited {
  color: #5B5957;
  background-color: #F4F1F0;
  border: 1px solid #F4F1F0;
}

.btn:hover {
  color: #F55800;
  background-color: #FFF5E1;
  border: 1px solid #F55800;
}

.btn:active {
  color: #F4F1F0;
  background-color: #E05304;
  border: 1px solid #E05304;
  transition: all 0s;
}

/* Cars2 */
.card {
  background-image: url("images/cards/card2.svg");
  background-repeat: no-repeat;
  background-size: cover;
  background-position: center;
  border: 1px solid #1C1A19;
}

.card .content {
  padding: 120px 10px 10px 10px;
}

.card h3,
.card p,
.card .tag-group {
  color: #fff;
}

.card .tag-group .tag {
  background: rgba(255, 255, 255, 0.24);
}

.btn-2 {
  text-align: center;
  width: 100%;
  padding: 10px;
  box-sizing: border-box;
}

